# hyperlog

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  gpu-smoke.yml
clients/python/: __init__.py  hylog_client.py
configs/ablation/: a1_hybrid_vs_standalone.yaml  a2_lora_rank.yaml  a3_lora_target_modules.yaml  a4_projector_depth.yaml  a5_encoder_lora.yaml  a6_temperature_scaling.yaml  a7_preprocessor.yaml  a8_tau_calibration_shift.yaml
configs/baselines/: logllm_bgl.yaml  logllm_hdfs.yaml
configs/decoders/: llama32_1b.yaml  llama32_3b.yaml  phi35_mini.yaml  qwen25_1_5b.yaml  qwen25_1_5b_instruct.yaml  tinyllama.yaml
configs/experiments/: hylog_bgl.yaml  hylog_hdfs.yaml  loso_bgl_held.yaml  loso_hdfs_held.yaml  loso_openstack_held.yaml  loso_thunderbird_held.yaml
data/: LICENSES.txt  checksums.txt  licenses.yaml
docs/: ROADMAP.md
docs/00_initial_materials/: LAD_Review_FA.html  Log_Anomaly_Detection_Literature_Review.docx  Research_Proposal_Two_Candidate_Strategies.docx
paper/: main.tex  references.bib
paper/figures/: .gitkeep
reports/phase2/: feasibility.json  reproduction.md
reports/phase3/: run.md
reports/phase4/: cross_system.md  loso_protocol.md  published_numbers.yaml
reports/phase5/: calibration.md
reports/phase6/: ablation_plan.md
reports/phase7/: reproducibility.md
reports/phase8/: model_card.md  openapi.json  service.md
reports/phase9/: release.md  reproducibility_appendix.md
scripts/: build_figures.py  build_paper.ps1  build_paper.sh  download_data.ps1  download_data.sh  dump_openapi.py  export_onnx.py  feasibility_check.ps1  feasibility_check.sh  reproduce_all.ps1  reproduce_all.sh  verify_install.ps1  verify_install.sh
splits/: bgl.json  hdfs.json  openstack.json  thunderbird.json
src/hylog/: __init__.py
src/hylog/calibration/: __init__.py  aurc.py  ece.py  platt.py  reliability.py  temperature.py  vector_scaling.py
src/hylog/cli/: __init__.py  ablation.py  calibrate.py  loso.py  predict.py  train.py
src/hylog/data/: __init__.py  dataset.py  licenses.py  preprocess.py  schema.py  sequencer.py  splits.py
src/hylog/evaluation/: __init__.py  ablation.py  baseline_comparison.py  bootstrap.py  cliffs_delta.py  confusion_renderer.py  cross_system.py  curves.py  leakage_audit.py  manifest_schema.py  metrics.py  ood_distance.py  run_manifest.py  statistical_tests.py
src/hylog/inference/: __init__.py  auth.py  drift.py  predictor.py  rate_limit.py  schemas.py  selective.py  server.py
src/hylog/models/: __init__.py  classification_head.py  decoder.py  encoder.py  hylog_core.py  projector.py  standalone_decoder.py
src/hylog/training/: __init__.py  collator.py  domain_adversarial.py  mlflow_html_export.py  mlflow_logger.py  qlora_trainer.py  seeded_runner.py  self_supervised.py  three_stage_trainer.py  vram.py
src/hylog/utils/: __init__.py  seeding.py
tests/: conftest.py
tests/fixtures/hdfs/: anomaly_label.csv
tests/fixtures/openstack/: anomaly_label.csv
tests/unit/: test_package.py
tests/unit/test_calibration/: test_aurc.py  test_ece.py  test_platt.py  test_reliability.py  test_temperature.py  test_vector_scaling.py
tests/unit/test_cli/: test_ablation_cli.py  test_calibrate_cli.py  test_dump_openapi.py  test_entry_points.py  test_loso_cli.py
tests/unit/test_data/: conftest.py  test_checksums_script.py  test_feasibility_report.py  test_licenses.py  test_loaders.py  test_phase7_files.py  test_phase8_files.py  test_phase9_files.py  test_preprocess.py  test_property_reconstruction.py  test_sequencer.py  test_splits.py
tests/unit/test_evaluation/: test_ablation.py  test_baseline_comparison.py  test_bootstrap.py  test_cliffs_delta.py  test_confusion_renderer.py  test_cross_system.py  test_curves.py  test_leakage_audit.py  test_manifest_schema.py  test_metrics.py  test_ood_distance.py  test_run_manifest.py  test_statistical_tests.py
tests/unit/test_inference/: test_auth.py  test_drift.py  test_predictor.py  test_rate_limit.py  test_schemas.py  test_selective.py  test_server.py
tests/unit/test_models/: conftest.py  test_classification_head.py  test_decoder_registry.py  test_encoder.py  test_hylog_core.py  test_logllm_baseline.py  test_projector.py  test_standalone_decoder.py
tests/unit/test_training/: test_ablation_configs.py  test_configs.py  test_domain_adversarial.py  test_loso_configs.py  test_mlflow_html_export.py  (+6 more)
(+9 files in other folders)
