[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hylog"
version = "0.0.1"
description = "Hybrid Small-Language-Model Pipeline for Cross-System Log Anomaly Detection with Calibrated Uncertainty"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Moslem Mohseni Khah", email = "farpod.ir@gmail.com" },
]
keywords = [
    "log-anomaly-detection",
    "small-language-models",
    "qlora",
    "calibration",
    "cross-system",
    "selective-prediction",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.12",
    "bitsandbytes>=0.43.0; platform_system != 'Darwin'",
    "accelerate>=0.34",
    "datasets>=2.20",
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3",
    "mlflow>=2.16",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "tqdm>=4.66",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.112",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
hylog-train = "hylog.cli.train:main"
hylog-predict = "hylog.cli.predict:main"
hylog-loso = "hylog.cli.loso:main"

[project.urls]
Homepage = "https://github.com/moslem-mohseni/hyperlog"
Repository = "https://github.com/moslem-mohseni/hyperlog"
Issues = "https://github.com/moslem-mohseni/hyperlog/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hylog*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
files = ["src/hylog"]

[[tool.mypy.overrides]]
module = [
    "bitsandbytes.*",
    "peft.*",
    "mlflow.*",
    "datasets.*",
    "transformers.*",
    "accelerate.*",
    "hydra.*",
    "omegaconf.*",
    "scipy.*",
]
ignore_missing_imports = true

# Heavy-typed modules: torch / transformers / peft return Tensor|Module unions
# that defeat strict-mode no-any-return and union-attr inference. We disable
# the noisy codes here but keep strict on the rest of the package.
[[tool.mypy.overrides]]
module = [
    "hylog.models.*",
    "hylog.evaluation.metrics",
    "hylog.evaluation.confusion_renderer",
    "hylog.evaluation.cross_system",
    "hylog.evaluation.curves",
    "hylog.evaluation.bootstrap",
    "hylog.evaluation.statistical_tests",
    "hylog.evaluation.ood_distance",
    "hylog.evaluation.run_manifest",
    "hylog.training.domain_adversarial",
    "hylog.training.self_supervised",
    "hylog.cli.loso",
]
disable_error_code = [
    "no-any-return",
    "union-attr",
    "operator",
    "arg-type",
    "no-untyped-call",
    "type-arg",
    "unused-ignore",
    "no-untyped-def",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable GPU",
    "slow: long-running tests",
    "integration: end-to-end integration tests",
]

[tool.coverage.run]
source = ["src/hylog"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
